Tue Jan 26 22:34:19 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcpsInfrastructure.idl:
        * dds/InfoRepo/Federator.idl:
        * dds/monitor/monitor.idl:

          Provide a constant for the maximum user Domain ID.  Move all Domain
          IDs used by OpenDDS to the range above that constant.

Tue Jan 26 15:22:28 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          inline=0 builds now require an #include of TransportInterface.h

Mon Jan 25 17:29:06 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Added compatibility with latest DOC group TAO_IDL compiler.

Mon Jan 25 17:05:00 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:

          Went back to just a fwd decl (not an include) of TransportImpl.
          This was required for gcc 3.3.2.

Fri Jan 22 22:13:53 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/mktiddler.pl:

          New script to generate a TiddlyWiki format table from latency
          test data created with the bin/extract.pl script.

        * performance-tests/Bench/bin/run_test:

          Added DDS_ROOT and ACE_ROOT to the search path so the script
          can execute from a local directory.

        * performance-tests/Bench/tools/plot-all.gp:

          Cosmetic cleanup for readability.

Fri Jan 22 20:20:35 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Messenger/subscriber.cpp:

          Fixed locally modified conditional used for stress testing.

Fri Jan 22 19:46:57 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/ReceiveListenerSetMap.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
