@@ -1,3 +1,9 @@
+Wed Jan 27 16:21:36 UTC 2010  Adam Mitz  <mitza@ociweb.com>
+
+        * tests/DCPS/Messenger/stack_subscriber.cpp:
+
+          Enable static loading of transports in static builds.
+
 Tue Jan 26 22:34:19 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DdsDcpsInfrastructure.idl:
